--- a/index.html
+++ b/index.html
@@ -11,13 +11,16 @@
       background: #111;
       color: #fff;
       text-align: center;
+      overflow-x: hidden;
     }
-    h1 { margin: 20px; }
+    h1 { margin: 20px; z-index: 1; position: relative; }
     .gallery {
       display: grid;
       grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
       gap: 15px;
       padding: 20px;
+      z-index: 1;
+      position: relative;
     }
     .gallery img {
       width: 100%;
@@ -35,6 +38,7 @@
     .gallery img:hover {
       transform: scale(1.05);
     }
+    /* Lightbox */
     .lightbox {
       position: fixed;
       top: 0; left: 0;
@@ -43,6 +47,7 @@
       display: none;
       justify-content: center;
       align-items: center;
+      z-index: 10;
     }
     .lightbox img {
       max-width: 90%;
@@ -55,18 +60,30 @@
       from { transform: scale(0.7); opacity: 0; }
       to { transform: scale(1); opacity: 1; }
     }
+    /* Background Canvas */
+    #bg-canvas {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      z-index: -1;
+      background: #111;
+    }
   </style>
 </head>
 <body>
-  <h1>✨ Hera's Animated Gallery ✨</h1>
+  <!-- Background Canvas -->
+  <canvas id="bg-canvas"></canvas>
+
+  <h1>✨ My Animated Gallery ✨</h1>
   <div class="gallery" id="gallery"></div>
 
+  <!-- Lightbox -->
   <div class="lightbox" id="lightbox">
     <img id="lightbox-img" src="" alt="Enlarged">
   </div>
 
   <script>
-    const username = "inodbandara-official";
+    const username = "inodbandara-official"; 
     const repo = "gallery-site";
     const branch = "main";
     const folder = "images";
@@ -101,6 +118,45 @@
     });
 
     loadImages();
+
+    const canvas = document.getElementById("bg-canvas");
+    const ctx = canvas.getContext("2d");
+    canvas.width = window.innerWidth;
+    canvas.height = window.innerHeight;
+
+    const particles = [];
+    for (let i = 0; i < 80; i++) {
+      particles.push({
+        x: Math.random() * canvas.width,
+        y: Math.random() * canvas.height,
+        r: Math.random() * 2 + 1,
+        dx: (Math.random() - 0.5) * 1.5,
+        dy: (Math.random() - 0.5) * 1.5
+      });
+    }
+
+    function animateParticles() {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      particles.forEach(p => {
+        ctx.beginPath();
+        ctx.arc(p.x, p.y, p.r, 0, Math.PI * 2);
+        ctx.fillStyle = "rgba(255,255,255,0.7)";
+        ctx.fill();
+
+        p.x += p.dx;
+        p.y += p.dy;
+
+        if (p.x < 0 || p.x > canvas.width) p.dx *= -1;
+        if (p.y < 0 || p.y > canvas.height) p.dy *= -1;
+      });
+      requestAnimationFrame(animateParticles);
+    }
+    animateParticles();
+
+    window.addEventListener("resize", () => {
+      canvas.width = window.innerWidth;
+      canvas.height = window.innerHeight;
+    });
   </script>
 </body>
 </html>
