--- a/index.html
+++ b/index.html
@@ -221,6 +221,16 @@
       font-size: 0.9rem;
     }
 
+    .footer a {
+      color: inherit;
+      text-decoration: none;
+    }
+
+    .footer a:hover {
+      text-decoration: underline;
+      color: #fff;
+    }
+
     @keyframes zoomIn {
       from { transform: scale(0.9); opacity: 0; }
       to { transform: scale(1); opacity: 1; }
